--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/demo
 spring.datasource.username=nkh
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 spring.thymeleaf.cache=false
