--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=todo
-
 spring.datasource.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5433/demo
 spring.datasource.username=nkh
 spring.datasource.password=password
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.sql.init.mode=always
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 spring.thymeleaf.cache=false
+tt.welcome=Welcome to To do task
+tt.about=This is about To do task
+
+DATABASE_URL="postgresql://${{PGUSER}}:${{POSTGRES_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:5432/${{PGDATABASE}}"
