--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,7 +2,7 @@ spring.application.name=todo
 spring.datasource.name=demo
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.password=${PGPASSWORD}
 spring.sql.init.mode=always
 spring.thymeleaf.cache=false
 tt.welcome=Welcome To do task
