--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-tt.welcome=Welcome to To do task
+tt.welcome=Welcome to do task
 tt.about=This is about To do task
